--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,12 @@
 # Default ignored files
 
-/workspace.xml
+/.idea
 # Datasource local storage ignored files
 /dataSources/
 /dataSources.local.xml
 # Editor-based HTTP Client requests
 /httpRequests/
 # 自定义
-/.idea/
 *.iml
 out
 gen
