--- a/yeb-server/pom.xml
+++ b/yeb-server/pom.xml
@@ -88,7 +88,12 @@
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-pool2</artifactId>
     </dependency>
-
+    <!--Easy POI-->
+    <dependency>
+      <groupId>cn.afterturn</groupId>
+      <artifactId>easypoi-spring-boot-starter</artifactId>
+      <version>4.3.0</version>
+    </dependency>
 
 
 
